fix: footer and button gap

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ a:hover, #credits:hover{
 
 .panels {
     margin:50px auto;
+    margin-bottom: 105px;
     width:1000px;
 }
 .main-game {
@@ -69,7 +70,7 @@ a:hover, #credits:hover{
     flex-direction: row;
     background-color: #c11d11;
     width:1000px;
-    height:350px;
+    height:300px;
     justify-content: center;
     border: 5px solid #1a1a1a;
     box-shadow:#1a1a1a 10px 5px 5px;
@@ -202,7 +203,7 @@ button:active{
 
 .footer-sec,.footer-border{
     width:100%;
-    position:absolute;
+    position:fixed;
     bottom:0;
 }
 
